# highs

./: .gitmodules  LICENSE  README.md  cabal.project  highs.cabal  install_highs.sh
.github/workflows/: ci.yml
src/Numeric/: LinearProgramming.hs
src/Numeric/LinearProgramming/: HiGHS.hs  Program.hs
src/Numeric/LinearProgramming/HiGHS/: LowLevel.hs
test/: Main.hs
test/Test/Numeric/: LinearProgramming.hs
test/Test/Numeric/LinearProgramming/: HiGHS.hs  Program.hs
test/Test/Numeric/LinearProgramming/HiGHS/: LowLevel.hs
